--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -45,7 +45,7 @@ We strengthen their security definitions to formally ensure that successfully ve
 
 On the practical side, our scheme Chipmunk produces smaller individual and aggregated signatures, when compared to Squirrel.
 In terms of computational efficiency metrics, Chipmunk either significantly outperforms Squirrel or remains comparable in speed.
-In terms of bandwidth, Chipmunk's individual and aggregate signatures are smaller by a factor of $1.4\times$ and $4.8\times$ respectively, when compared to Squirrel.
+In terms of bandwidth, Chipmunk's aggregate signatures are smaller by a factor of $4.8\times$, when compared to Squirrel.
 For keys that can generate $2^{24}$ signatures, an individual Chipmunk signatures is $32$ KB and aggregating $8192$ signatures results in an aggregate signature that is $180$ KB large.
 %The gap between Chipmunk's and Squirrel's performance increases with an increasing bound on the number of signatures that should issuable with a single key.
 %One of Squirrel's main computational bottlenecks was key generation as generating keys that support $2^{21}$ and $2^{26}$ signatures took $4$ minutes and $2$ hours.
